get method implemented
