# swagger.yaml
@@ -125,6 +125,10 @@ paths:
         required: true
         type: "string"
       responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Customer"
         404:
           description: "Customer not found"
     patch:      
